# Enna-Media-Server

./: .gitignore  AUTHORS  Application.cpp  Application.h  COPYING  CdromManager.cpp  CdromManager.h  Data.h  Database.cpp  Database.h  DefaultSettings.h  DirectoryWorker.cpp  DirectoryWorker.h  DiscoveryServer.cpp  DiscoveryServer.h  EnnaMediaServer2.pro  FlacPlugin.cpp  FlacPlugin.h  Grabbers.cpp  Grabbers.h  GracenotePlugin.cpp  GracenotePlugin.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  JsonApi.cpp  JsonApi.h  LocalFileScanner.cpp  LocalFileScanner.h  Makefile.am  MetadataManager.cpp  MetadataManager.h  MetadataPlugin.h  OnlineDBPlugin.h  OnlineDBPluginManager.cpp  OnlineDBPluginManager.h  Player.cpp  Player.h  README  README.md  (+22 more)
QUnQLite/: qunqlite.h  qunqlitecursor.h
data/: Makefile.am  enna-media-server.conf
data/graphics/mediacenter/: background.xcf  button.xcf
data/images/: Makefile.am
data/themes/: Makefile.am
data/themes/default/: Makefile.am  default.edc  player.edc
data/themes/default/elm/: button.edc  elm.edc  gengrid.edc  genlist.edc  naviframe.edc  scroller.edc  video.edc
data/themes/desktop/: Makefile.am  default.edc  desktop.edc  desktop.edj  icons.edc
data/themes/desktop/elm/: button.edc  elm.edc  gengrid.edc  genlist.edc
doc/: Protocol.md  configuration.txt  database.txt  index.html
doc/database/: database.dia  database.sql
doc/database/samples/: ems.db  settings.conf
imgs/: banner.xcf
script/: 70smart-mcone  70smartnotifier  99-ems-cdrom-manager.rules  99-ems-sndcard-manager.rules  ems_cdrom_changed.sh
src/: Makefile.am
src/ems/: Application.cpp  Application.h  CdromManager.cpp  CdromManager.h  CdromRipper.cpp  CdromRipper.h  CoverLocalPlugin.cpp  CoverLocalPlugin.h  Data.h  Database.cpp  Database.h  DefaultSettings.h  DirectoriesWatcher.cpp  DirectoriesWatcher.h  DiscoveryServer.cpp  DiscoveryServer.h  DsdPlugin.cpp  DsdPlugin.h  DsfPlugin.cpp  DsfPlugin.h  FlacEncoder.cpp  FlacEncoder.h  FlacPlugin.cpp  FlacPlugin.h  GracenotePlugin.cpp  GracenotePlugin.h  HttpClient.cpp  HttpServer.cpp  HttpServer.h  JsonApi.cpp  JsonApi.h  LocalFileScanner.cpp  LocalFileScanner.h  MetadataManager.cpp  MetadataManager.h  MetadataPlugin.h  NetworkCtl.cpp  NetworkCtl.h  NetworkCtlConnman.cpp  NetworkCtlConnman.h  (+20 more)
src/lib/: Ecore_Con_Eet.h  Ems.h  Makefile.am  build.sh  client.c  ecore_con_eet.c  ems.h  ems_avahi.c  ems_avahi.h  ems_collection.c  ems_collection.h  ems_config.c  ems_config.h  ems_database.c  ems_database.h  ems_database_statements.h  ems_downloader.c  ems_downloader.h  ems_grabber.c  ems_grabber.h  ems_main.c  ems_node.c  ems_node.h  ems_parser.c  ems_parser.h  ems_private.h  ems_scanner.c  ems_scanner.h  ems_server.c  ems_server.h  ems_server_eet.c  ems_server_eet.h  ems_server_protocol.c  ems_server_protocol.h  ems_stream_server.c  ems_stream_server.h  ems_utils.c  ems_utils.h  ems_video.c  ems_video.h
src/lib/etam/: Etam.h  etam_collection.c  etam_db.c  etam_main.c  etam_private.h  example.c
src/lib/extras/: Makefile.am  sha1.c  sha1.h
src/lib/server/: Makefile.am  build.sh  client.c  server.c  services.azy  services2.azy
src/modules/: Makefile.am
src/modules/allocine/: Makefile.am  ems_grabber_allocine.c
src/modules/betaseries/: Makefile.am  ems_grabber_betaseries.cpp
src/modules/lastfm/: Makefile.am  ems_grabber_lastfm.c
src/modules/t411/: Makefile.am  ems_grabber_t411.c
src/modules/thetvdb/: Makefile.am  ems_grabber_thetvdb.cpp
src/modules/tmdb/: Makefile.am  ems_grabber_tmdb.c
src/tests/: Makefile.am  avahi_service.c  test-grabber.c
systemd/: ems.service
tests/: app.js  bower.json  readme.md
tests/app/: autotests.html  index.html  main.js
tests/app/scripts/: autotests.js  main.js  utils.js
